Testing exception from AuthProvider.